--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -53,17 +53,17 @@ body {
   position: relative;
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   top: 4rem;
   left: 4rem;
 }
 
-.logo {
+.header__logo {
   height: 3.5rem;
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -132,12 +132,12 @@ body {
   box-shadow: 0 0.5rem 0.1rem rgba(0, 0, 0, 0.2);
 }
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInBottom 0.5s ease-out;
   animation-delay: 1s;
   animation-fill-mode: backwards;
@@ -155,7 +155,7 @@ body {
   z-index: -1;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
