--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -1,16 +1,39 @@
-/**********/
-/* COLORS */
-/**********/
-/*
-Light green: #7ed56f
-Medium green: #55c57a
-Dark green: #28b485
-*/
-
-/***************/
-/* BASIC SETUP */
-/***************/
-
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-10rem);
+  }
+  80% {
+    transform: translateX(1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(10rem);
+  }
+  80% {
+    transform: translateX(-1rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(3rem);
+  }
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
 *,
 *::after,
 *::before {
@@ -24,68 +47,31 @@ html {
 }
 
 body {
+  box-sizing: border-box;
+  /* borders and padding are not added to the box size */
+}
+
+body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
   color: #777;
   padding: 3rem;
-  box-sizing: border-box; /* borders and padding are not added to the box size */
-}
-
-/**********/
-/* HEADER */
-/**********/
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(
-      to right bottom,
-      rgba(126, 213, 111, 0.8),
-      rgba(40, 180, 133, 0.8)
-    ),
-    url(../img/hero.jpg);
-  background-size: cover;
-  background-position: top;
-
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-
-  position: relative;
-}
-
-.header__logo-box {
-  position: absolute;
-  top: 4rem;
-  left: 4rem;
-}
-
-.header__logo {
-  height: 3.5rem;
-}
-
-.header__text-box {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
 }
 
 .heading-primary {
   color: #fff;
   text-transform: uppercase;
   margin-bottom: 6rem;
-
   /* Use this if the animation is shaking at the end */
   /* backface-visibility: hidden; */
 }
-
 .heading-primary--main {
   display: block;
   font-size: 6rem;
   font-weight: 400;
   letter-spacing: 3.5rem;
-
   /* animation-name: moveInLeft;
   animation-duration: 1.5s;
   animation-delay: 3s;
@@ -93,25 +79,18 @@ body {
   animation-timing-function: ease-out; */
   animation: moveInLeft 1.5s ease-out;
 }
-
 .heading-primary--sub {
   display: block;
   font-size: 2rem;
   font-weight: 700;
   letter-spacing: 1.75rem;
-
   /* animation-name: moveInRight;
   animation-duration: 1.5s;
   animation-timing-function: ease-out; */
   animation: moveInRight 1.5s ease-out;
 }
 
-/***********/
-/* BUTTONS */
-/***********/
-
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   display: inline-block;
   text-transform: uppercase;
   text-decoration: none;
@@ -120,29 +99,20 @@ body {
   transition: all 0.2s;
   position: relative;
 }
-
 .btn:hover {
   transform: translateY(-0.3rem);
   /* shadow values: x y blur color */
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
-
+.btn:hover::after {
+  opacity: 0;
+  transform: scaleX(1.4) scaleY(1.6);
+  transition: all 0.4s;
+}
 .btn:active {
   transform: translateY(-0.1rem);
   box-shadow: 0 0.5rem 0.1rem rgba(0, 0, 0, 0.2);
 }
-
-.btn--white {
-  background-color: #fff;
-  color: #777;
-}
-
-.btn--animated {
-  animation: moveInBottom 0.5s ease-out;
-  animation-delay: 1s;
-  animation-fill-mode: backwards;
-}
-
 .btn::after {
   content: "";
   display: inline-block;
@@ -154,61 +124,41 @@ body {
   left: 0;
   z-index: -1;
 }
-
+.btn--white {
+  background-color: #fff;
+  color: #777;
+}
 .btn--white::after {
   background-color: #fff;
 }
-
-.btn:hover::after {
-  opacity: 0;
-  transform: scaleX(1.4) scaleY(1.6);
-  transition: all 0.4s;
+.btn--animated {
+  animation: moveInBottom 0.5s ease-out;
+  animation-delay: 1s;
+  animation-fill-mode: backwards;
 }
 
-/**************/
-/* ANIMATIONS */
-/**************/
-
-@keyframes moveInLeft {
-  0% {
-    opacity: 0;
-    transform: translateX(-10rem);
-  }
-
-  80% {
-    transform: translateX(1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
+  background-size: cover;
+  background-position: top;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+  position: relative;
+}
+.header__logo-box {
+  position: absolute;
+  top: 4rem;
+  left: 4rem;
+}
+.header__logo {
+  height: 3.5rem;
+}
+.header__text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
 }
 
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-
-  80% {
-    transform: translateX(-1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(3rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
+/*# sourceMappingURL=style.css.map */
