--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -11,12 +11,13 @@
     border-radius: 100px;
     transition: all 0.2s;
     position: relative;
+    font-size: $default-font-size;
   }
 
   &:hover {
     transform: translateY(-0.3rem);
     /* shadow values: x y blur color */
-    box-shadow: 0 10px 20px rgba($color-black, 0.2);
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
 
     &::after {
       opacity: 0;
@@ -55,5 +56,31 @@
     animation: moveInBottom 0.5s ease-out;
     animation-delay: 1s;
     animation-fill-mode: backwards;
+  }
+}
+
+.btn-text {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $color-primary;
+    display: inline-block;
+    text-decoration: none;
+    border: 1px solid $color-primary;
+    padding: 0.5rem 2rem;
+    border-radius: 100px;
+    transition: all 0.2s;
+  }
+
+  &:hover {
+    background-color: $color-primary;
+    color: $color-white;
+    box-shadow: 0 1rem 2rem rgba($color-black, 0.2);
+    transform: translateY(-0.2rem);
+  }
+
+  &:active {
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 0.3rem rgba($color-black, 0.4);
   }
 }
