--- a/Natours/sass/main.scss
+++ b/Natours/sass/main.scss
@@ -8,7 +8,7 @@
 @import "base/utilities";
 
 @import "components/button";
-@import "pages/home";
+@import "components/composition";
 
 @import "layout/header";
 @import "layout/grid";
