--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -52,6 +52,7 @@ body {
     $color-primary-dark
   );
   display: inline-block;
+  background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
   transition: all 0.2s;
