--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -52,6 +52,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   &--animated {
     animation: moveInBottom 0.5s ease-out;
     animation-delay: 1s;
