--- a/Natours/sass/pages/_home.scss
+++ b/Natours/sass/pages/_home.scss
@@ -5,7 +5,6 @@
 }
 
 .section-features {
-  padding: 20rem 0;
   background-image: linear-gradient(
       to right bottom,
       rgba($color-primary-light, 0.8),
@@ -13,6 +12,7 @@
     ),
     url(../img/nat-4.jpg);
   background-size: cover;
+  padding: 20rem 0;
   margin-top: -10rem;
 
   transform: skewY(-7deg);
@@ -26,4 +26,9 @@
   background-color: $color-grey-light-1;
   padding: 25rem 0 15rem 0;
   margin-top: -10rem;
+}
+
+.section-stories {
+  position: relative;
+  padding: 15rem 0;
 }
