--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -2,6 +2,7 @@
 // Buttons
 
 .btn {
+  &,
   &:link,
   &:visited {
     display: inline-block;
@@ -12,6 +13,10 @@
     transition: all 0.2s;
     position: relative;
     font-size: $default-font-size;
+
+    // Change for the <button> element
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -26,7 +31,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 0.1rem rgba($color-black, 0.2);
   }
