--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -56,7 +56,7 @@ body {
   font-weight: 400;
   font-size: 1.6rem;
   line-height: 1.7;
-  color: #777;
+  color: #999;
   padding: 3rem;
 }
 
@@ -184,7 +184,7 @@ body {
 }
 .btn--white {
   background-color: #fff;
-  color: #777;
+  color: #999;
 }
 .btn--white::after {
   background-color: #fff;
@@ -491,7 +491,7 @@ body {
   border-bottom: 3px solid #ff7730;
 }
 .form__input::-webkit-input-placeholder {
-  color: #999;
+  color: #777;
 }
 .form__label {
   font-size: 1.2rem;
@@ -613,6 +613,53 @@ body {
   width: calc(
       (3 * (100% - 3 * 6rem) / 4) + 2 * 6rem
     );
+}
+
+.footer {
+  background-color: #333;
+  padding: 10rem 0;
+  font-size: 1.4rem;
+  color: #f7f7f7;
+}
+.footer__logo-box {
+  text-align: center;
+}
+.footer__logo {
+  width: 15rem;
+  height: auto;
+}
+.footer__navigation {
+  border-top: 1px solid #999;
+  padding-top: 2rem;
+  display: inline-block;
+}
+.footer__list {
+  list-style: none;
+}
+.footer__item {
+  display: inline-block;
+}
+.footer__item:not(:last-child) {
+  margin-right: 1.5rem;
+}
+.footer__link:link, .footer__link:visited {
+  background-color: #333;
+  color: #f7f7f7;
+  text-decoration: none;
+  text-transform: uppercase;
+  display: inline-block;
+  transition: all 0.2s;
+}
+.footer__link:hover, .footer__link:active {
+  color: #55c57a;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+  transform: rotate(5deg) scale(1.3);
+}
+.footer__copyright {
+  border-top: 1px solid #999;
+  padding-top: 2rem;
+  width: 80%;
+  float: right;
 }
 
 .section-about {
