--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -2,8 +2,8 @@
 // Variables
 
 // Colors
-$color-primary: #55c57a;
 $color-primary-light: #7ed56f;
+$color-primary: #55c57a;
 $color-primary-dark: #28b485;
 
 $color-secondary-light: #ffb900;
@@ -14,10 +14,14 @@ $color-tertiary-dark: #5643fa;
 
 $color-white: #fff;
 $color-black: #000;
-$color-grey-dark: #777;
-$color-grey-darker: #999;
+
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
+// FIX THIS VARIABLES NAMES
+$color-grey-dark: #999;
+$color-grey-darker: #777;
+// END
+$color-grey-dark-3: #333;
 
 // Grid
 $grid-width: 114rem;
