--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -530,15 +530,15 @@ body {
   top: -0.4rem;
 }
 .form__radio-btn::after {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   content: "";
   display: block;
   height: 1rem;
   width: 1rem;
   border-radius: 50%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   background-color: #55c57a;
   opacity: 0;
   transition: opacity 0.3s;
@@ -564,8 +564,20 @@ body {
   width: 75%;
   background-color: #fff;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
 }
-
+.popup__left {
+  width: 33.333333%;
+  float: left;
+}
+.popup__right {
+  width: 66.666667%;
+  float: right;
+}
+.popup__img {
+  display: block;
+  width: 100%;
+}
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
@@ -719,12 +731,12 @@ body {
   transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 .navigation__list {
-  list-style: none;
-  text-align: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  list-style: none;
+  text-align: center;
   width: 100%;
 }
 .navigation__item {
