--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -159,10 +159,7 @@
   // Back side styling
 
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include absoluteCenter;
     width: 90%;
     text-align: center;
   }
