--- a/Natours/sass/components/_popup.scss
+++ b/Natours/sass/components/_popup.scss
@@ -12,5 +12,24 @@
     width: 75%;
     background-color: $color-white;
     box-shadow: 0 2rem 4rem rgba($color-black, 0.2);
+    border-radius: 3px;
+  }
+
+  &__left {
+    width: 33.333333%;
+    float: left;
+  }
+
+  &__right {
+    width: 66.666667%;
+    float: right;
+  }
+
+  &__img {
+    display: block;
+    width: 100%;
+  }
+
+  &__text {
   }
 }
