--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -565,19 +565,38 @@ body {
   background-color: #fff;
   box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
   border-radius: 3px;
+  display: table;
+  overflow: hidden;
 }
 .popup__left {
   width: 33.333333%;
-  float: left;
+  display: table-cell;
 }
 .popup__right {
   width: 66.666667%;
-  float: right;
+  display: table-cell;
+  vertical-align: middle;
+  padding: 3rem 5rem;
 }
 .popup__img {
   display: block;
   width: 100%;
 }
+.popup__text {
+  font-size: 1.4rem;
+  margin-bottom: 4rem;
+  -moz-column-count: 2;
+  -moz-column-gap: 4rem;
+  -moz-column-rule: 1px solid #eee;
+  column-count: 2;
+  column-gap: 4rem;
+  column-rule: 1px solid #eee;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url(../img/hero.jpg);
