--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -1,3 +1,17 @@
+/******************************
+Media Query Manager
+0-600px       Phone
+600-900px     Tablet Portrait
+900-1200px    Tablet Landscape
+1200-1800px   Default Style
+1800px+       Big screens
+
+$breakpoint argument choices:
+- phone
+- tab-port
+- tab-land
+- big-scrn
+******************************/
 @keyframes moveInLeft {
   0% {
     opacity: 0;
@@ -44,7 +58,21 @@
 
 html {
   font-size: 62.5%;
-  scroll-behavior: smooth;
+}
+@media (max-width: 75em) {
+  html {
+    font-size: 56.25%;
+  }
+}
+@media (max-width: 56.25em) {
+  html {
+    font-size: 50%;
+  }
+}
+@media (min-width: 112.5em) {
+  html {
+    font-size: 75%;
+  }
 }
 
 body {
