--- a/Natours/sass/abstracts/_mixins.scss
+++ b/Natours/sass/abstracts/_mixins.scss
@@ -26,6 +26,10 @@ $breakpoint argument choices:
 - tab-port
 - tab-land
 - big-scrn
+
+Order:
+Base + Typography | General Layout + Grid | Page Layout | Components
+
 ******************************/
 
 @mixin respond($breakpoint) {
