--- a/Natours/sass/base/_base.scss
+++ b/Natours/sass/base/_base.scss
@@ -28,4 +28,9 @@ html {
 
 body {
   box-sizing: border-box; /* borders and padding are not added to the box size */
+  padding: 3rem;
+
+  @include respond(tab-port) {
+    padding: 0;
+  }
 }
