--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -25,6 +25,7 @@ $color-grey-dark-3: #333;
 
 // Grid
 $grid-width: 114rem;
+$gutter-vertical-sm: 6rem;
 $gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
 
