--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -4,14 +4,12 @@ body {
   font-size: $default-font-size;
   line-height: 1.7;
   color: $color-grey-dark;
-  padding: 3rem;
 }
 
 .heading-primary {
   color: $color-white;
   text-transform: uppercase;
   margin-bottom: 6rem;
-
   /* Use this if the animation is shaking at the end */
   /* backface-visibility: hidden; */
 
@@ -27,6 +25,11 @@ body {
     animation-iteration-count: 3;
     animation-timing-function: ease-out; */
     animation: moveInLeft 1.5s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 1rem;
+      font-family: 5rem;
+    }
   }
 
   &--sub {
@@ -39,6 +42,11 @@ body {
     animation-duration: 1.5s;
     animation-timing-function: ease-out; */
     animation: moveInRight 1.5s ease-out;
+
+    @include respond(phone) {
+      letter-spacing: 0.5rem;
+      font-family: 5rem;
+    }
   }
 }
 
@@ -57,6 +65,14 @@ body {
   color: transparent;
   transition: all 0.2s;
   letter-spacing: 0.2rem;
+
+  @include respond(tab-port) {
+    font-size: 3rem;
+  }
+
+  @include respond(phone) {
+    font-size: 2.5rem;
+  }
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
