--- a/Natours/css/style.css
+++ b/Natours/css/style.css
@@ -752,15 +752,32 @@ body {
   transform: translate(-50%, -50%) scale(0.25);
   transition: all 0.5s 0.2s;
 }
+@media (max-width: 56.25em) {
+  .popup__content {
+    display: flex;
+    flex-direction: column;
+  }
+}
 .popup__left {
   width: 33.333333%;
   display: table-cell;
+}
+@media (max-width: 56.25em) {
+  .popup__left {
+    display: flex;
+    width: 50%;
+  }
 }
 .popup__right {
   width: 66.666667%;
   display: table-cell;
   vertical-align: middle;
   padding: 3rem 5rem;
+}
+@media (max-width: 56.25em) {
+  .popup__right {
+    width: 100%;
+  }
 }
 .popup__img {
   display: block;
@@ -798,6 +815,14 @@ body {
   display: inline-block;
   transition: all 0.2s;
   line-height: 1;
+}
+@media (max-width: 56.25em) {
+  .popup__close:link, .popup__close:visited {
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 50%;
+    padding: 0.5rem 1rem;
+  }
 }
 .popup__close:hover {
   color: #55c57a;
