--- a/Natours/sass/components/_popup.scss
+++ b/Natours/sass/components/_popup.scss
@@ -23,11 +23,21 @@
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.25);
     transition: all 0.5s 0.2s;
+
+    @include respond(tab-port) {
+      display: flex;
+      flex-direction: column;
+    }
   }
 
   &__left {
     width: 33.333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      display: flex;
+      width: 50%;
+    }
   }
 
   &__right {
@@ -35,6 +45,10 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      width: 100%;
+    }
   }
 
   &__img {
@@ -84,6 +98,13 @@
       display: inline-block;
       transition: all 0.2s;
       line-height: 1;
+
+      @include respond(tab-port) {
+        color: $color-white;
+        border: 1px solid $color-white;
+        border-radius: 50%;
+        padding: 0.5rem 1rem;
+      }
     }
 
     &:hover {
