--- a/Natours/sass/base/_base.scss
+++ b/Natours/sass/base/_base.scss
@@ -12,6 +12,7 @@
 html {
   // This defines what 1rem is
   font-size: 62.5%; // 1rem = 10px, 10/16 = 62.5%
+  scroll-behavior: smooth;
 
   @include respond(tab-land) {
     font-size: 56.25%; // 1rem = 9px, 9/16 = 56.25%
