--- a/Natours/sass/components/_popup.scss
+++ b/Natours/sass/components/_popup.scss
@@ -5,12 +5,19 @@
   top: 0;
   left: 0;
   z-index: 10000;
-  background-color: rgba($color-black, 0.8);
-
   opacity: 0;
   visibility: hidden;
-
   transition: all 0.3s;
+  background-color: rgba($color-black, 0.8);
+
+  // Implementing graceful degradatrion
+  @supports (-webkit-backdrop-filter: blur(10px)) or
+    (backdrop-filter: blur(10px)) {
+    // if the features above are supported, then...
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba($color-black, 0.3);
+  }
 
   &__content {
     @include absoluteCenter;
@@ -109,6 +116,10 @@
 
     &:hover {
       color: $color-primary;
+
+      @include respond(tab-port) {
+        border: 1px solid $color-primary;
+      }
     }
   }
 }
