--- a/Trillo/sass/_layout.scss
+++ b/Trillo/sass/_layout.scss
@@ -25,9 +25,15 @@
 .sidebar {
   background-color: var(--color-grey-dark-3);
   flex: 0 0 18%;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
+  height: 80rem;
+
   background-color: var(--color-white);
   flex: 1; // allows the item to grow occupying the remaing white space
 }
