--- a/Trillo/css/style.css
+++ b/Trillo/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --color-primary: #eb2f64;
   --color-primary-light: #ff3366;
@@ -11,7 +12,9 @@
   --color-grey-dark-2: #777;
   --color-grey-dark-3: #333;
   --color-black: #000;
+  --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
   --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
+  --line: 1px solid var(--color-grey-light-2);
 }
 
 * {
@@ -41,6 +44,11 @@ body {
   min-height: 100vh;
 }
 
+::selection {
+  background-color: var(--color-primary);
+  color: var(--color-white);
+}
+
 .container {
   max-width: 120rem;
   margin: 8rem auto;
@@ -53,7 +61,7 @@ body {
   font-size: 1.4rem;
   height: 7rem;
   background-color: var(--color-white);
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -72,16 +80,44 @@ body {
 }
 
 .hotel-view {
-  height: 80rem;
   background-color: var(--color-white);
   flex: 1;
 }
 
+.detail {
+  font-size: 1.4rem;
+  display: flex;
+  padding: 4.5rem;
+  background-color: var(--color-grey-light-1);
+  border-bottom: var(--line);
+}
+
+.description {
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  flex: 0 0 60%;
+  margin-right: 4.5rem;
+}
+
+.user-reviews {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/****************************
+  Logo
+****************************/
 .logo {
   height: 3.25rem;
   margin-left: 2rem;
 }
 
+/****************************
+  Search Box
+****************************/
 .search {
   flex: 0 0 40%;
   display: flex;
@@ -127,6 +163,9 @@ body {
   fill: var(--color-grey-dark-1);
 }
 
+/****************************
+  User Navigation
+****************************/
 .user-nav {
   display: flex;
   align-items: center;
@@ -170,6 +209,9 @@ body {
   margin-right: 1rem;
 }
 
+/****************************
+  Sidebar Navigation
+****************************/
 .side-nav {
   font-size: 1.4rem;
   list-style: none;
@@ -218,6 +260,9 @@ body {
   fill: currentColor;
 }
 
+/****************************
+  Legal Text
+****************************/
 .legal {
   font-size: 1.2rem;
   text-align: center;
@@ -225,6 +270,9 @@ body {
   color: var(--color-grey-light-4);
 }
 
+/****************************
+  Gallery
+****************************/
 .gallery {
   display: flex;
 }
@@ -233,10 +281,13 @@ body {
   display: block;
 }
 
+/****************************
+  Hotel Overview
+****************************/
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 }
 .overview__heading {
   font-size: 2.25rem;
@@ -283,6 +334,9 @@ body {
   text-transform: uppercase;
 }
 
+/****************************
+  Inline Button
+****************************/
 .btn-inline {
   border: none;
   color: var(--color-primary);
@@ -294,10 +348,17 @@ body {
   cursor: pointer;
   transition: all 0.2s;
 }
+.btn-inline span {
+  margin-left: 0.3rem;
+  transition: margin-left 0.2s;
+}
 .btn-inline:hover {
   color: var(--color-grey-dark-3);
 }
-.btn-inline:focus {
+.btn-inline:hover span {
+  margin: 0.8rem;
+}
+.btn-inline .btn-inline:focus {
   outline: none;
   animation: pulsate 1s infinite;
 }
@@ -315,6 +376,177 @@ body {
     transform: scale(1);
     box-shadow: none;
   }
+}
+/****************************
+  Paragraphs
+****************************/
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+/****************************
+  List
+****************************/
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+  display: flex;
+  flex-wrap: wrap;
+}
+.list__item {
+  flex: 0 0 50%;
+  margin-bottom: 0.7rem;
+}
+.list__item::before {
+  content: "";
+  display: inline-block;
+  height: 1rem;
+  width: 1rem;
+  margin-right: 0.7rem;
+  background-color: var(--color-primary);
+  -webkit-mask-image: url(../img/chevron-thin-right.svg);
+  -webkit-mask-size: cover;
+  mask-image: url(../img/chevron-thin-right.svg);
+  mask-size: cover;
+}
+
+/****************************
+  Recommend
+****************************/
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-1);
+  display: flex;
+  align-items: center;
+}
+.recommend__count {
+  margin-right: auto;
+}
+.recommend__photo {
+  box-sizing: content-box;
+  height: 4rem;
+  width: 4rem;
+  border-radius: 50%;
+  border: 3px solid var(--color-white);
+}
+.recommend__photo:not(:last-child) {
+  margin-right: -1.5rem;
+}
+
+/****************************
+  Reviews
+****************************/
+.review {
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+}
+.review__text {
+  margin-bottom: 2rem;
+  z-index: 10;
+  position: relative;
+}
+.review__user {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.review__photo {
+  height: 4.5rem;
+  width: 4.5rem;
+  border-radius: 50%;
+  margin-right: 1.5rem;
+}
+.review__user-box {
+  margin-left: 1rem;
+  margin-right: auto;
+}
+.review__user-name {
+  font-size: 1.1rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 0.4rem;
+}
+.review__user-date {
+  font-size: 1rem;
+  color: var(--color-grey-dark-1);
+}
+.review__rating {
+  font-size: 2.25rem;
+  color: var(--color-primary);
+  font-weight: 300;
+}
+.review::before {
+  content: "“";
+  position: absolute;
+  top: -2.75rem;
+  left: -1rem;
+  line-height: 1;
+  font-size: 20rem;
+  color: var(--color-grey-light-2);
+  font-family: sans-serif;
+  z-index: 1;
+}
+
+/****************************
+  Call to Action
+****************************/
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+}
+.cta__book-now {
+  font-size: 2rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  margin-bottom: 2.5rem;
+}
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  border: none;
+  cursor: pointer;
+  background-image: linear-gradient(to right, var(--color-primary-light), var(--color-primary-dark));
+  color: var(--color-white);
+  position: relative;
+  overflow: hidden;
+}
+.btn > * {
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  transition: all 0.2s;
+}
+.btn__visible {
+  padding: 2rem 7.5rem;
+}
+.btn__invisible {
+  position: absolute;
+  padding: 2rem 0;
+  left: 0;
+  top: -100%;
+}
+.btn:hover {
+  background-image: linear-gradient(to left, var(--color-primary-light), var(--color-primary-dark));
+}
+.btn:hover .btn__visible {
+  transform: translateY(100%);
+}
+.btn:hover .btn__invisible {
+  top: 0;
+}
+.btn:focus {
+  outline: none;
+  animation: pulsate 1s infinite;
 }
 
 /*# sourceMappingURL=style.css.map */
