--- a/Trillo/sass/_components.scss
+++ b/Trillo/sass/_components.scss
@@ -1,12 +1,16 @@
-/////////////////////////////
-// Logo
+/****************************
+  Logo
+****************************/
+
 .logo {
   height: 3.25rem;
   margin-left: 2rem;
 }
 
-/////////////////////////////
-// Search box
+/****************************
+  Search Box
+****************************/
+
 .search {
   flex: 0 0 40%;
   display: flex;
@@ -60,8 +64,10 @@
   }
 }
 
-/////////////////////////////
-// User navigation
+/****************************
+  User Navigation
+****************************/
+
 .user-nav {
   display: flex;
   align-items: center;
@@ -112,8 +118,9 @@
   }
 }
 
-/////////////////////////////
-// Side navigation
+/****************************
+  Sidebar Navigation
+****************************/
 
 .side-nav {
   font-size: 1.4rem;
@@ -174,8 +181,9 @@
   }
 }
 
-/////////////////////////////
-// Legal text
+/****************************
+  Legal Text
+****************************/
 
 .legal {
   font-size: 1.2rem;
@@ -184,8 +192,9 @@
   color: var(--color-grey-light-4);
 }
 
-/////////////////////////////
-// Gallery
+/****************************
+  Gallery
+****************************/
 
 .gallery {
   display: flex;
@@ -196,12 +205,14 @@
   }
 }
 
-/////////////////////////////
-// Hotel Overview
+/****************************
+  Hotel Overview
+****************************/
+
 .overview {
   display: flex;
   align-items: center;
-  border-bottom: 1px solid var(--color-grey-light-2);
+  border-bottom: var(--line);
 
   &__heading {
     font-size: 2.25rem;
@@ -258,8 +269,9 @@
   }
 }
 
-/////////////////////////////
-// Button inline
+/****************************
+  Inline Button
+****************************/
 
 .btn-inline {
   border: none;
@@ -272,11 +284,20 @@
   cursor: pointer;
   transition: all 0.2s;
 
-  &:hover {
-    color: var(--color-grey-dark-3);
+  & span {
+    margin-left: 0.3rem;
+    transition: margin-left 0.2s;
   }
 
-  &:focus {
+  &:hover {
+    color: var(--color-grey-dark-3);
+
+    span {
+      margin: 0.8rem;
+    }
+  }
+
+  & &:focus {
     outline: none;
     animation: pulsate 1s infinite;
   }
@@ -294,5 +315,223 @@
   100% {
     transform: scale(1);
     box-shadow: none;
+  }
+}
+
+/****************************
+  Paragraphs
+****************************/
+
+.paragraph:not(:last-of-type) {
+  margin-bottom: 2rem;
+}
+
+/****************************
+  List
+****************************/
+
+.list {
+  list-style: none;
+  margin: 3rem 0;
+  padding: 3rem 0;
+  border-top: var(--line);
+  border-bottom: var(--line);
+
+  display: flex;
+  flex-wrap: wrap;
+
+  &__item {
+    flex: 0 0 50%;
+    margin-bottom: 0.7rem;
+  }
+
+  &__item::before {
+    content: "";
+    display: inline-block;
+    height: 1rem;
+    width: 1rem;
+    margin-right: 0.7rem;
+
+    //older browsers
+    // background-image: url(../img/chevron-thin-right.svg);
+    // background-size: cover;
+
+    //new browsers - using masks
+    background-color: var(--color-primary);
+    -webkit-mask-image: url(../img/chevron-thin-right.svg);
+    -webkit-mask-size: cover;
+    mask-image: url(../img/chevron-thin-right.svg);
+    mask-size: cover;
+  }
+}
+
+/****************************
+  Recommend
+****************************/
+
+.recommend {
+  font-size: 1.3rem;
+  color: var(--color-grey-dark-1);
+
+  display: flex;
+  align-items: center;
+  // justify-content: space-between;
+
+  &__count {
+    margin-right: auto; // same as 'justify-content: space-between'
+  }
+
+  &__friends {
+  }
+
+  &__photo {
+    box-sizing: content-box;
+    height: 4rem;
+    width: 4rem;
+    border-radius: 50%;
+    border: 3px solid var(--color-white);
+
+    &:not(:last-child) {
+      margin-right: -1.5rem;
+    }
+  }
+}
+
+/****************************
+  Reviews
+****************************/
+
+.review {
+  background-color: var(--color-white);
+  box-shadow: var(--shadow-light);
+  padding: 3rem;
+  margin-bottom: 3.5rem;
+  position: relative;
+  overflow: hidden;
+
+  &__text {
+    margin-bottom: 2rem;
+    z-index: 10;
+    position: relative;
+  }
+
+  &__user {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  &__photo {
+    height: 4.5rem;
+    width: 4.5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+  }
+
+  &__user-box {
+    margin-left: 1rem;
+    margin-right: auto;
+  }
+
+  &__user-name {
+    font-size: 1.1rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 0.4rem;
+  }
+
+  &__user-date {
+    font-size: 1rem;
+    color: var(--color-grey-dark-1);
+  }
+
+  &__rating {
+    font-size: 2.25rem;
+    color: var(--color-primary);
+    font-weight: 300;
+  }
+
+  &::before {
+    content: "\201C";
+    position: absolute;
+    top: -2.75rem;
+    left: -1rem;
+    line-height: 1;
+    font-size: 20rem;
+    color: var(--color-grey-light-2);
+    font-family: sans-serif;
+    z-index: 1;
+  }
+}
+
+/****************************
+  Call to Action
+****************************/
+
+.cta {
+  padding: 3.5rem 0;
+  text-align: center;
+
+  &__book-now {
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-bottom: 2.5rem;
+  }
+}
+
+.btn {
+  font-size: 1.5rem;
+  font-weight: 300;
+  text-transform: uppercase;
+  border-radius: 100px;
+  border: none;
+  cursor: pointer;
+  background-image: linear-gradient(
+    to right,
+    var(--color-primary-light),
+    var(--color-primary-dark)
+  );
+  color: var(--color-white);
+  position: relative;
+  overflow: hidden;
+
+  & > * {
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    transition: all 0.2s;
+  }
+
+  &__visible {
+    padding: 2rem 7.5rem;
+  }
+
+  &__invisible {
+    position: absolute;
+    padding: 2rem 0;
+    left: 0;
+    top: -100%;
+  }
+
+  &:hover {
+    background-image: linear-gradient(
+      to left,
+      var(--color-primary-light),
+      var(--color-primary-dark)
+    );
+  }
+
+  &:hover &__visible {
+    transform: translateY(100%);
+  }
+
+  &:hover &__invisible {
+    top: 0;
+  }
+
+  &:focus {
+    outline: none;
+    animation: pulsate 1s infinite;
   }
 }
